src/main/java/com/example/finalprojectdtomarket/_core/errors/exception2/Exception403.java
package com.example.finalprojectdtomarket._core.errors.exception2;

public class Exception403 extends RuntimeException {
    public Exception403(String msg) {
        super(msg);
    }
}
